Fixed layout issues

--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -1,10 +1,10 @@
-.container-main {
+/* .container-main {
   max-width: 375px;
   height: 812px;
   background-image: url("../assets/landing.png");
   background-repeat: no-repeat;
   margin-left: 0;
-}
+} */
 
 .gameRules {
   font-family: Josefin Sans, sans-serif;
