--- a/src/styles/LandingNew.css
+++ b/src/styles/LandingNew.css
@@ -1,8 +1,8 @@
-.container-main {
+.div-main{
   max-width: 100%;
   height: 100vh;
   background-image: url("../assets/landing-new.png");
-  background-size: cover;
+  background-size: cover; 
   background-repeat: no-repeat;
   background-position: center center;
   margin-left: 0;
